...
    <include
        layout="@layout/app_bar"
        android:id="@+id/app_bar">
    </include>

    <ListView
        android:id="@+id/listview"
        android:layout_width="382dp"
        android:layout_height="583dp"
        android:layout_below="@+id/app_bar"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
...
